--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,3 +2,31 @@ body
 {
     font-size:18px
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(0, 85, 72);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+  }
+  li {
+    float: left;
+  }
+  lir {
+    float: right;
+  }
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: rgb(0, 170, 100);
+  }
