Construção da barra do menu e de inclusão de imagens

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,28 @@
     </head>
     <body>
         <header>
+            <!-- <h1>Integrador</h1> -->
+          
+        <nav class="menus2">
+            <ul class="menus">
+                <li class="menulogo"><a href="/">Integrador</a></li>
+                <li class="menusup"><a href="#">Home</a></li>
+                <li class="menusup"><a href="#">Our team</a></li>
+                <li class="menusup"><a href="#">Projects</a></li>
+                <li class="menusup"><a href="#">Contact</a></li>
+                <li class="busca">
+                    <form >
+                        <input type="search" name="q" placeholder="Search query">
+                        <input type="submit" value="Go!">
+                    </form>
+                </li>
+    
+            </ul>
+        </nav>
+    </header>
+
+
+        <!-- <header>
             <ul id="menu"> 
                 <li><a class="active" href="#">Agendei</a></li>
                 <li><a class="deactive" href="#">Reservas</a></li>
@@ -20,15 +42,17 @@
                     <li><a class="deactive" href="/login">Conecte-se</a></li>
                 </lir>
             </ul>
-        </header>
+        </header> -->
         <body>
             {% block content%} {% endblock %}
         </body>
         <footer>
-            <ul>
+            <!-- <ul>
                 <li><a href="github.com/JoseWRPereira" target="_blank">GitHub</a></li>
-                <li><a href="gitlab.com/JoseWRPereira" target="_blank">GitHub</a></li>
-            </ul>
+                <li><a href="gitlab.com/JoseWRPereira" target="_blank">GitLab</a></li>
+                <li><img src="notebook.png"></li>
+            </ul> -->
+            <p>©Copyleft 2050 by jwrp. All rights reversed.</p>
         </footer>
     </body>
 </html>
