--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,32 +1,87 @@
+
 body
 {
-    font-size:18px
+  font-family: 'Courier New', Courier, monospace;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(0, 85, 72);
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-  }
-  li {
-    float: left;
-  }
-  lir {
-    float: right;
-  }
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: rgb(0, 170, 100);
-  }
+h1 
+{
+  color: rgb(0, 150, 150);
+  font-size: 200%;
+  font-family: 'Courier New', Courier, monospace;
+  border-bottom: 1px solid rgb(0, 70, 170);
+}
+h2 
+{
+  color: rgb(0, 150, 150);
+  font-size: 150%;
+}
+h3
+{
+  color: rgb(0, 150, 150);
+  font-size: 120%;
+}
+
+a:link
+{
+  text-decoration: none;
+}
+
+.menus
+{
+  background-color: #f1f1f1;
+  padding: 1.2%;
+  margin: 0px;
+}
+
+.menulogo
+{
+  /* border: 5px solid whitesmoke; */
+  border: 5px solid #f1f1f1;
+  padding: 0.7%;
+  font-size: 130%;
+  display: inline;
+  list-style: none;
+  box-sizing: 100px;
+}
+.menulogo:hover
+{
+  border-bottom-color: rgb(0, 255, 166);
+}
+
+.menusup
+{
+  /* border: 3px solid white; */
+  border: 3px solid #f1f1f1;
+  padding: 0.7%;
+  font-size: 130%;
+  display: inline;
+  list-style: none;
+  box-sizing: 100px;
+}
+.menusup:hover
+{
+  border-bottom-color: rgb(17, 0, 255);
+}
+
+.busca
+{
+  list-style: none;
+  float: right;
+}
+
+.boxbotom {
+  width:  100px;
+  height: 100px;
+  display: inline-block;
+}
+.botom
+{
+  height: 100%;
+  width: 100%;
+  border-radius: 20%;
+  object-fit: cover;
+}
+
+
+
