--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,10 @@
 
     <!-- Contém um artigo -->
     <article>
-      <h2>Article heading</h2>
+      <h1>Article heading</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
 
-      <h3>Subsection</h3>
+      <h2>Subsection</h2>
 
       <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
 
@@ -19,21 +19,18 @@
 
       <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
 
+      <h3>Another subsection</h3>
+
+      <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
+
+      <h3>Another subsection</h3>
+
+      <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
+
       <p>Vivamus fermentum semper porta. Nunc diam velit, adipscing ut tristique vitae sagittis vel odio. Maecenas convallis ullamcorper ultricied. Curabitur ornare, ligula semper consectetur sagittis, nisi diam iaculis velit, is fringille sem nunc vet mi.</p>
     </article>
-
-    <!-- <div class="wrapper"> -->
-      <div class="boxbotom"><img src="/static/images/forLearning/notebook.png" alt="notebook" class="botom"></div>
-      <div class="boxbotom"><img src="/static/images/forLearning/startrek_black.jpg" alt="startrek" class="botom"></div>
-      <div class="boxbotom"><img src="/static/images/forLearning/calendar.png" alt="calendar" class="botom"></div>
-      <div class="boxbotom"><img src="/static/images/forLearning/e-prise_widescreen.jpg" alt="e-prise" class="botom"></div>
-      <div class="boxbotom"><img src="/static/images/forLearning/microprocessor.png" alt="up" class="botom"></div>
-
-
-    <!-- O contéudo do elemento aside pode ser aninhado dentro do conteúdo do elemento main -->
     <aside>
       <h2>Related</h2>
-
       <ul>
         <li><a href="#">Oh I do like to be beside the seaside</a></li>
         <li><a href="#">Oh I do like to be beside the sea</a></li>
