--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,7 @@
   --cor5: rgb(150,0,150);
 
   --cor10: rgb(42,42,42);
-  --cor11: rgb(200,200,200);
+  --cor11: rgb(220,220,220);
   --cor12: rgb(100,200,250);
   --cor13: rgb(200,250,250);
   --cor14: rgb(250,200,100);
@@ -20,7 +20,6 @@
   font-family: 'Courier New', Courier, monospace;  
   font-size: 18px;
   color: var(--cor0);
-  /* background-color: var(--cor1); */
   text-decoration: none;
   margin: 0 auto;
   padding: 0;
@@ -47,6 +46,7 @@ h3
 {
   text-align: center;
   padding: 20px;
+  background-color: var(--cor11);
 }
 #header-msg p
 {
@@ -57,7 +57,10 @@ h3
 {
   position: sticky;
   top: 0px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+
 #menu-h ul
 {
   list-style: none;
@@ -92,22 +95,52 @@ h3
 }
 
 
-#social-media ul
+
+.footer-separator
 {
-  text-decoration: none;
+  background-color: var(--cor3);
+  height: 5px;
+}
+
+
+
+.social-media
+{
   display: flex;
   background-color: var(--cor11);
 }
-#social-media ul li
+.social-media ul
 {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
-#social-media ul li a
+.social-media ul li
 {
-  display: flex-block; 
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border-bottom: 2px solid var(--cor3);
-  padding: 10px;
-  text-decoration: none;
+  display: flex;
+  margin: 10px;
+  margin-inline: 30px;
+}
+.social-media ul li a:hover
+{
+  opacity: var(--cor2);
+}
+
+
+
+
+.footer-copyleft
+{
+  background-color: var(--cor11);
+  align-items: center;
+  text-align: center;
+}
+svg
+{
+  width: 42px;
+  height: 42px;
+}
+.svg-footer-fill:hover
+{
+  fill: var(--cor3);
 }
