--- a/templates/base.html
+++ b/templates/base.html
@@ -9,13 +9,13 @@
         <script src="https://kit.fontawesome.com/22e5ea0d80.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header id="header-msg">
+        <header class="header-msg">
             <div>
                 <h2>Scroll Down</h2>
                 <p>Scroll down to see the sticky effect.</p>
             </div>
         </header>
-        <nav id="menu-h">
+        <nav class="menu-h">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Sobre</a></li>
@@ -27,23 +27,6 @@
         <body>
             {% block content%} {% endblock %}
         </body>
-        <!-- <footer>
-            <nav id="social-media">
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li><a href="">Twitter</a></li>
-                    <li><a href="">LinkedIn</a></li>
-                    <li><a href="">GitHub</a></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </nav>
-        </footer> -->
-
-
         <footer>
             <div class="footer-separator">
                 <br>
