--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,21 @@
                 <path d="M256 0C114.6 0 0 114.6 0 256s114.6 256 256 256s256-114.6 256-256S397.4 0 256 0zM256 128c39.77 0 72 32.24 72 72S295.8 272 256 272c-39.76 0-72-32.24-72-72S216.2 128 256 128zM256 448c-52.93 0-100.9-21.53-135.7-56.29C136.5 349.9 176.5 320 224 320h64c47.54 0 87.54 29.88 103.7 71.71C356.9 426.5 308.9 448 256 448z"  class="svg-nav-fill"/></svg>
             </ul>
         </nav>
-
-        <body>
-            {% block content%} {% endblock %}
-        </body>
+        <div class="container">
+            <!-- <aside class="sidebar">
+                <div class="navigation">
+                    <ul>
+                        <li><a href=""> Dashboard</li>
+                        <li><a href=""> Indicações</li>
+                        <li><a href=""> Contatos</li>
+                    </ul>
+                </div>
+            </aside> -->
+            <body> 
+                {% block content%} {% endblock %}
+            </body>
+        </div>
+        
         <footer>
             <div class="separator">
                 <br>
