--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,204 @@
+:root
+{
+  --cor0: rgb(0,0,0);
+  --cor1: rgb(255,255,255);
+  --cor2: rgb(0,100,200);
+  --cor3: teal;
+  --cor4: rgb(200,0,0);
+  --cor5: rgb(150,0,150);
+
+  --cor10: rgb(42,42,42);
+  --cor11: rgb(220,220,220);
+  --cor12: rgb(100,200,250);
+  --cor13: rgb(200,250,250);
+  --cor14: rgb(250,200,100);
+  --cor15: rgb(250,150,250);
+}
+
+*
+{
+  font-family: 'Courier New', Courier, monospace;  
+  /* font-size: 18px; */
+  /* color: var(--cor0); */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body
 {
-    font-size:18px
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+}
+
+
+.sidebar
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 240px;
+    background: var(--cor3);
+    padding: 6px 14px;
+}
+
+.sidebar .logo_content .logo
+{
+    color: var(--cor1);
+    display: flex;
+    height: 50px;
+    width: 100%;
+    align-items: center;
+}
+
+.logo_content .logo i
+{
+    font-size: 28px;
+    margin-right: 5px;
+}
+
+
+.logo_content .logo .logo_name
+{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.sidebar #btn
+{
+    position: absolute;
+    color: var(--cor1);
+    left: 90%;
+    top: 6px;
+    font-size: 20px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    line-height: 50px;
+    transform: translateX(-50%);
+}
+
+.sidebar ul
+{
+    margin-top: 20px;
+}
+
+.sidebar ul li
+{
+    position: relative;
+    height: 50px;
+    width: 100%;
+    margin: 0 5px;
+    list-style: none;
+    line-height: 50px;
+}
+.sidebar ul li input
+{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    border-radius: 12px;
+    outline: none;
+    border: none;
+    background: var(--cor13);
+    padding-left: 50px;
+    font-size: 18px;
+    color: var(--cor0);
+}
+.sidebar ul li .fa-magnifying-glass
+{
+    position: absolute;
+    z-index: 99;
+    color: var(--cor10);
+    font-size: 22px;
+}
+.sidebar ul li a
+{
+    color: var(--cor11);
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    /* transition: all 0.4s ease; */
+    border-radius: 12px;
+}
+.sidebar ul li a:hover
+{
+    color: var(--cor3);
+    background: var(--cor11);
+}
+.sidebar ul li i
+{
+    height: 50px;
+    min-width: 50px;
+    border-radius: 12px;
+    line-height: 50px;
+    text-align: center;
+}
+
+
+
+
+.sidebar .profile_content
+{
+    position: absolute;
+    color: var(--cor1);
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+}
+
+.sidebar .profile_content .profile
+{
+    position: relative;
+    padding: 10px 6px;
+    height: 60px;
+    background: var(--cor10);
+}
+
+.profile_content .profile .profile_details
+{
+    display: flex;
+    align-items: center;
+}
+
+.profile .profile_details img
+{
+    height: 45px;
+    width: 45px;
+    object-fit: cover;
+    border-radius: 25%;
+}
+
+.profile .profile_details .name_job
+{
+    margin-left: 10px;
+}
+
+.profile .profile_details .name
+{
+    font-size: 15px;
+    font-weight: 400;
+
+}
+.profile .profile_details .job
+{
+    font-size: 12px;
+}
+
+.profile #logout
+{
+    position: absolute;
+    left: 75%;
+    bottom: 5%;
+    transform: translateX(50%);
+    min-width: 50px;
+    line-height: 50px;
+    font-size: 20px;
+    border-radius: 12px;
 }
