--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,9 +40,15 @@ body
     top: 0;
     left: 0;
     height: 100%;
-    width: 240px;
+    width: 78px;
     background: var(--cor3);
     padding: 6px 14px;
+    transition: all 0.5s ease;
+}
+
+.sidebar.active
+{
+    width: 240px;
 }
 
 .sidebar .logo_content .logo
@@ -52,6 +58,14 @@ body
     height: 50px;
     width: 100%;
     align-items: center;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.sidebar.active .logo_content .logo
+{
+    opacity: 1;
+    pointer-events: none;
 }
 
 .logo_content .logo i
@@ -71,7 +85,7 @@ body
 {
     position: absolute;
     color: var(--cor1);
-    left: 90%;
+    left: 50%;
     top: 6px;
     font-size: 20px;
     height: 50px;
@@ -80,7 +94,10 @@ body
     line-height: 50px;
     transform: translateX(-50%);
 }
-
+.sidebar.active #btn
+{
+    left: 90%;
+}
 .sidebar ul
 {
     margin-top: 20px;
@@ -95,6 +112,38 @@ body
     list-style: none;
     line-height: 50px;
 }
+
+.sidebar ul li .tooltip
+{
+    position: absolute;
+    left: 122px;
+    top: 0;
+    transform: translateY(-50%);
+    border-radius: 6px;
+    height: 35px;
+    width: 122px;
+    background: var(--cor13);
+    line-height: 35px;
+    text-align: center;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    transition: 0s;
+    opacity: 0;
+    pointer-events: none;
+    display: block;
+}
+.sidebar.active ul li .tooltip
+{
+    display: none;
+}
+
+
+.sidebar ul li:hover .tooltip
+{
+    transition: all 0.5s ease;
+    opacity: 1;
+    top: 50%;
+}
+
 .sidebar ul li input
 {
     position: absolute;
@@ -116,7 +165,15 @@ body
     z-index: 99;
     color: var(--cor10);
     font-size: 22px;
+    transition: all 0.5 sease;
 }
+
+.sidebar ul li .fa-magnifying-glass:hover
+{
+    background: var(--cor10);
+    color: var(--cor0);
+}
+
 .sidebar ul li a
 {
     color: var(--cor11);
@@ -202,3 +259,23 @@ body
     font-size: 20px;
     border-radius: 12px;
 }
+
+
+
+
+.home_content
+{
+    position: absolute;
+    height: 100%;
+    width: calc(100% - 240px);
+    left: 240px;
+}
+
+.home_content .text
+{
+    font-size: 25px;
+    font-weight: 500;
+    color: var(--cor0);
+    margin: 12px;
+}
+
