--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,8 @@
   --cor13: rgb(200,250,250);
   --cor14: rgb(250,200,100);
   --cor15: rgb(250,150,250);
+
+  --cor20: rgb(82,82,82);
 }
 
 *
@@ -60,6 +62,7 @@ body
     align-items: center;
     opacity: 0;
     pointer-events: none;
+    transition: all 0.5s ease;
 }
 
 .sidebar.active .logo_content .logo
@@ -118,7 +121,7 @@ body
     position: absolute;
     left: 122px;
     top: 0;
-    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
     border-radius: 6px;
     height: 35px;
     width: 122px;
@@ -182,6 +185,7 @@ body
     text-decoration: none;
     /* transition: all 0.4s ease; */
     border-radius: 12px;
+    white-space: nowrap;
 }
 .sidebar ul li a:hover
 {
@@ -197,7 +201,17 @@ body
     text-align: center;
 }
 
-
+.sidebar .links_name
+{
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.5s ease;
+}
+.sidebar.active .links_name
+{
+    opacity: 1;
+    pointer-events: auto;
+}
 
 
 .sidebar .profile_content
@@ -216,12 +230,28 @@ body
     padding: 10px 6px;
     height: 60px;
     background: var(--cor10);
+    transition: all 0.4s ease;
+}
+
+.sidebar.active .profile_content .profile
+{
+    background: none;
+    background: var(--cor20);
 }
 
 .profile_content .profile .profile_details
 {
     display: flex;
     align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    white-space: nowrap;
+}
+
+.sidebar.active .profile .profile_details
+{
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .profile .profile_details img
@@ -251,24 +281,35 @@ body
 .profile #logout
 {
     position: absolute;
-    left: 75%;
     bottom: 5%;
-    transform: translateX(50%);
+    left: 0%;
+    transform: translateX(35%);
     min-width: 50px;
     line-height: 50px;
     font-size: 20px;
     border-radius: 12px;
+    text-align: center;
+    transition: all 0.5s ease;
+    background: var(--cor20);
 }
 
+.sidebar.active .profile #logout
+{
+    left: 70%;
+    transition: all 0.5s ease;
+}
 
-
-
+.sidebar.active .profile #logout
+{
+    background: none;
+}
 .home_content
 {
     position: absolute;
     height: 100%;
-    width: calc(100% - 240px);
-    left: 240px;
+    width: calc(100% - 78px);
+    left: 78px;
+    transition: all 0.5s ease;
 }
 
 .home_content .text
@@ -279,3 +320,8 @@ body
     margin: 12px;
 }
 
+.sidebar.active ~ .home_content
+{
+    width: calc(100% - 240px);
+    left: 240px;
+}
