Add fonte para criação do estilo

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -325,3 +325,10 @@ body
     width: calc(100% - 240px);
     left: 240px;
 }
+
+
+/* 
+    Fonte: CodingLab
+    URL: https://youtu.be/wEfaoAa99XY
+    Acessado em 18/04/2022 
+*/
