--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}
-Integral
-{% endblock %}
+{% block title %} Integrador {% endblock %}
 
 {% block content %}
 
