--- a/app/templates/newuser.html
+++ b/app/templates/newuser.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<form method="POST">
+<form action="" method="POST">
     <h3>Novo usuário</h3>
 
     {% with messages = get_flashed_messages() %}
@@ -15,11 +15,19 @@
         {% endif %}
     {% endwith %}
 
-    <input type="text" placeholder="Nome completo" name="nome">
+    <!-- <input type="text" placeholder="Nome completo" name="nome">
     <input type="email" placeholder="usuario@email.com" name="email">
     <input type="password" placeholder="Senha" name="passwd">
     <input type="password" placeholder="Confirmar senha" name="confirm">
+    <input type="submit" value="Criar" name="newuser_btn"> -->
+
+    {{ form_newuser.csrf_token }}
+    {{ form_newuser.name( placeholder="Nome completo", maxlength="50" ) }}
+    {{ form_newuser.email( placeholder="usuario@email.com", maxlength="50" ) }}
+    {{ form_newuser.password( placeholder="Senha", maxlength="10") }}
+    {{ form_newuser.password_confirm( placeholder="Confirme a Senha", maxlength="10") }}
     <input type="submit" value="Criar" name="newuser_btn">
+
 </form>
 
 
