--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -14,6 +14,7 @@
             {% endfor %}
         {% endif %}
     {% endwith %}  
+    {% if 'username' in session: %}
     <table border="1">
         {% for registro in users %}
         <tr>
@@ -23,6 +24,7 @@
         </tr>
         {% endfor %}
     </table>
+    {% endif %}
 </form>
 
 {% endblock %}
