--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -21,6 +21,9 @@
             {% for campo in registro %}
             <td> {{ campo }} </td>
             {% endfor %}
+            <td>
+                <a href="/users/delete/{{registro[0]}}">Excluir</a>
+            </td>
         </tr>
         {% endfor %}
     </table>
