--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,7 +19,7 @@
     {{ form_login.csrf_token }}
     {{ form_login.email( placeholder="usuario@email.com", maxlength="50" ) }}
     {{ form_login.password( placeholder="Senha", maxlength="10") }}
-    <input type="submit" value="Enviar" id="pwd_btn">
+    <input type="submit" value="Entrar" id="pwd_btn">
     <h5><a href="/newuser">Criar uma conta</a></h5>
 
 </form>
