create table of reservations

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,13 @@
                     </a>
                     <span class="tooltip">Dashboard</span>
                 </li>
+                <li>
+                    <a href="/reservations">
+                        <i class="fa-regular fa-calendar-days"></i>
+                        <span class="links_name">Reservas</span>
+                    </a>
+                    <span class="tooltip">Reservas</span>
+                </li>
                 {% if 'username' in session: %}
                 <li>
                     <a href="/cars/manager">
