--- a/app/templates/reservations.html
+++ b/app/templates/reservations.html
@@ -3,23 +3,31 @@
 {% block title %} Reservas {% endblock %}
 
 {% block content %}
-
-<table>
-    <tr>
-        <td>ID</td>
-        <td>Data</td>
-        <td>Carrinho</td>
-        <td>Manhã</td>
-        <td>Tarde</td>
-        <td>Noite</td>
-    </tr>
-    {% for registro in lst %}
-    <tr>
-        {% for i in registro %}
-        <td> {{i}} </td>
+<form class="reservations" method="POST">
+    <div class="calendar">
+        <label for="calendario">Calendário</label>
+        <!-- <i class="fa-solid fa-angle-left"></i> -->
+        <input type="date" id="calendario" name="calendario" value="{{session['reservation_date']}}">
+        <!-- <i class="fa-solid fa-angle-right"></i> -->
+        <input type="submit" value="Buscar" id="buscar_btn">
+    </div>
+    <br>
+    <table>
+        <tr>
+            <td>ID</td>
+            <td>Data</td>
+            <td>Carrinho</td>
+            <td>Manhã</td>
+            <td>Tarde</td>
+            <td>Noite</td>
+        </tr>
+        {% for registro in lst %}
+        <tr>
+            {% for i in registro %}
+            <td> {{i}} </td>
+            {% endfor %}
+        </tr>
         {% endfor %}
-    </tr>
-    {% endfor %}
-</table>
-
+    </table>
+</form>
 {% endblock %}
